<resources>
    <!-- App Name -->
    <string name="app_name">Pokebowl</string>

    <!-- Image Text -->
    <string name="line">Line</string>
    <string name="questionmark">Questionmark</string>
    <string name="arrow">Arrow</string>
    <string name="rectangle">Rectangle</string>
    <string name="image">Image</string>

    <!-- Main Page -->
    <string name="appTitle">PokeBowlGo</string>
    <string name="serveFood">We serve food!</string>
    <string name="punchLineOne">A place where we</string>
    <string name="punchLineTwo">deliver you</string>
    <string name="punchLineThree">a fresh</string>
    <string name="punchLineFour">self made Pokebowl</string>
    <string name="createBtn">Create a PokeBowl</string>
    <string name="whatBtn">What is a PokeBowl?</string>
    <string name="termsBtn">Terms of service</string>


    <!-- What is a pokebowl -->
    <string name="whatPoke">What is a pokebowl?</string>
    <string name="createPoke">Create your own!</string>
    <string name="textLine">Poke is diced raw fish served either as an appetizer or as a main course
        and is one of the main dishes of Native Hawaiian cuisine. Traditional forms are aku and
        heʻe. Heʻe poke is usually called by its Japanese name tako poke, except in places like the
        island of Niʻihau where the Hawaiian language is spoken.</string>

    <!-- Terms of service -->
    <string name="termsPoke">Terms of service</string>
    <string name="termsText">Your money, our money.</string>
    <string name="textview">TextView</string>

    <!-- Payment Method -->
    <string name="selectMethod">Select payment method</string>

    <!-- Country Spinner -->
    <string-array name="countries">
        <item>Netherlands</item>
        <item>Germany</item>
        <item>France</item>
        <item>Belgium</item>
        <item>Luxembourg</item>
    </string-array>

    <!-- Address Form -->
    <string name="enterAddress">Please enter your address.</string>
    <string name="address">Address</string>
    <string name="address2">Address 2 (optional)</string>
    <string name="city">City</string>
    <string name="stateProvince">State/Province</string>
    <string name="Country">Country (Listed are the only places we ship in)</string>
    <string name="continueBtn">Continue</string>
    
    <!-- Creditcard Payment -->
    <string name="creditcardInfo">Creditcard info</string>
    <string name="cardHolderName">Card holder name</string>
    <string name="cardNumber">Card number</string>
    <string name="securityCode">Security code (CVC)</string>
    <string name="cardIssuer">Card issuer</string>
    <string name="cardExpiryDate">Card expiry date</string>
    <string name="confirmOrder">Confirm order</string>
    <string name="month">MM</string>
    <string name="year">YY</string>
    
    <!-- Create your own pokebowl -->
    <string name="createYourOwn">Create your own</string>
    <string name="createYourPokeBase">Pokebowl - Base</string>
    <string name="createYourPokeSide">Pokebowl - Sides</string>
    <string name="createYourPokeProtein">Pokebowl - Protein</string>
    <string name="createYourPokeMix">Pokebowl - Mix-Ins</string>
    <string name="createYourPokeSauce">Pokebowl - Sauce</string>
    <string name="createYourPokeTopping">Pokebowl - Topping</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="brown">Brown Rice</string>
    <string name="white">White Rice</string>
    <string name="mixed">Mixed Rice</string>
    <string name="seaweed">Seaweed</string>
    <string name="edamame">Edamame</string>
    <string name="crab">Crab Meat</string>
    <string name="avocado">Avocado</string>
    <string name="chicken">Chicken</string>
    <string name="salmon">Salmon</string>
    <string name="shrimp">Shrimp</string>
    <string name="tuna">Tuna</string>
    <string name="cilantro">Cilantro</string>
    <string name="cucumber">Cucumber</string>
    <string name="jalapeno">Jalapeno</string>
    <string name="onion">Onion</string>
    <string name="sesamedressing">Sesame Dressing</string>
    <string name="sweetchili">Sweet Chili</string>
    <string name="spicymayo">Spicy Mayo</string>
    <string name="wasabiaioli">Wasabi Aioli</string>
    <string name="pineapple">Pineapple</string>
    <string name="sesameseeds">Sesame Seeds</string>
    <string name="tamago">Tamago</string>
    <string name="corn">Corn</string>

    <!-- Selected Ingredients -->
    <string name="selectedIngredients">Selected ingredients</string>
    <string name="createYourPoke">Pokebowl</string>
    <string name="continuePayment">Continue Payment</string>

    <!-- Order Overview -->
    <string name="pokeOnItsWay">Pokebowl is on its way!</string>
    <string name="ingredients">Ingredients</string>
    <string name="returnHome">Return home</string>
</resources>
